welcome.lessons.welcome.bat.bool2.In1To10.scala.code
def in1To10(n:Int, outsideMode:Boolean):Boolean = {
	if(!oustideMode){
		if(n>=1 && 10>=n){
			return true
		}else return false
	}else if(n>=1 && 10>=n){
		return false
	}else return true
}
